# circle_ci_test

./: .gitattributes  .travis.yml  CMakeLists.txt  LICENSE.txt  README.md  package.xml  upstream.rosinstall
.circleci/: config.yml
.docker/melodic/: Dockerfile
include/ci_test/: class_name.h
include/circle_ci_test/: class_name.h
launch/: class_name_main.launch  gdb_settings.gdb
src/: class_name.cpp  class_name_main.cpp
test/: class_name_test.cpp  class_name_test.test
