<?xml version="1.0"?>
<package format="2">
  <name>circle_ci_test</name>
  <version>0.0.1</version>
  <description>Test for running a ROS package in CircleCI."</description>

  <maintainer email="tyler@picknik.ai">Tyler Weaver</maintainer>
  <author email="tyler@picknik.ai">Tyler Weaver</author>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>eigen</depend>

  <test_depend>rostest</test_depend>
  <test_depend>rosunit</test_depend>

  <export>
  </export>
</package>
